--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-mdx": "^2.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
